FIx: alignment

--- a/src/Components/ManualSearchForm/ManualSearchForm.module.css
+++ b/src/Components/ManualSearchForm/ManualSearchForm.module.css
@@ -1,6 +1,13 @@
+.ManualSearchFormDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .ManualSearchForm {
   display: flex;
-  align-items: center;
+
   gap: 10px;
   margin: 0 0 10px 0;
 }
@@ -18,20 +25,7 @@
   border-radius: 12px;
 }
 
-.cantFindDiv {
-  height: fit-content;
-  width: 100%;
-
-  display: flex;
-  align-items: center;
-
-  flex-direction: column;
-  gap: 5px;
-}
-
 .cantFindMessage {
-  width: 80%;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,4 +33,8 @@
   gap: 5px;
 
   margin-bottom: 20px;
+}
+
+.closeBtn {
+  align-self: flex-end;
 }
